--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -2,10 +2,10 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>com.weicoder</groupId> 
-		<artifactId>parent</artifactId>
-		<version>2.3.9</version>
-		<relativePath>../parent/pom.xml</relativePath>
+		<groupId>com.weicoder</groupId>
+		<artifactId>weicoder</artifactId>
+		<version>2.5.0</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>dao</artifactId>
