--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>com.weicoder</groupId>
-		<artifactId>parent</artifactId>
-		<version>3.0.1</version>
-		<relativePath>../parent/pom.xml</relativePath>
+		<artifactId>weicoder</artifactId>
+		<version>2.5.0</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>oauth</artifactId>
@@ -18,10 +18,10 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>web</artifactId>
-		</dependency>
+		</dependency> 
 		<dependency>
-			<groupId>com.weicoder</groupId>
-			<artifactId>http</artifactId>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId> 
 		</dependency>
 	</dependencies>
 </project>
