--- a/boot/pom.xml
+++ b/boot/pom.xml
@@ -4,9 +4,13 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.1.0</version>
+		<version>3.1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion> 
 	<artifactId>boot</artifactId> 
+	<packaging>jar</packaging> 
+	<name>cloud</name>
+	<description>java tools</description>
+	<url>https://github.com/wdcode/weicoder</url>
 </project>
