--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -16,6 +16,10 @@
 			<artifactId>core</artifactId>
 		</dependency>   
 		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>protobuf</artifactId> 
+		</dependency> 
+		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId> 
 		</dependency> 
