--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.weicoder</groupId>
 	<artifactId>weicoder</artifactId>
-	<version>3.1.3</version>
+	<version>3.2.0</version>
 	<packaging>pom</packaging>
 	<name>weicoder</name>
 	<description>java tools</description>
@@ -38,7 +38,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<parent>3.1.3</parent>
+		<parent>3.2.0</parent>
 		<jdk>11</jdk>
 		<maven-compiler-plugin>3.8.1</maven-compiler-plugin>
 		<maven-source-plugin>3.2.1</maven-source-plugin>
@@ -58,6 +58,8 @@
 		<protobuf-java>3.11.1</protobuf-java>
 		<hibernate-core>5.4.10.Final</hibernate-core>
 		<druid>1.1.21</druid>
+		<HikariCP>3.4.1</HikariCP>
+		<mysql-connector-java>8.0.18</mysql-connector-java>
 		<netty-all>4.1.44.Final</netty-all>
 		<mongo-java-driver>3.12.0</mongo-java-driver>
 		<jedis>3.2.0</jedis>
@@ -70,7 +72,7 @@
 		<hibernate-search>5.11.4.Final</hibernate-search>
 		<commons-dbcp2>2.7.0</commons-dbcp2>
 		<mina-core>2.1.3</mina-core>
-		<aspectjrt>1.9.5</aspectjrt> 
+		<aspectjrt>1.9.5</aspectjrt>
 	</properties>
 
 	<licenses>
@@ -382,6 +384,16 @@
 				<version>${druid}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.zaxxer</groupId>
+				<artifactId>HikariCP</artifactId>
+				<version>${HikariCP}</version>
+			</dependency>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>${mysql-connector-java}</version>
+			</dependency>
+			<dependency>
 				<groupId>io.netty</groupId>
 				<artifactId>netty-all</artifactId>
 				<version>${netty-all}</version>
@@ -463,7 +475,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.aspectj</groupId>
-				<artifactId>aspectjrt</artifactId> 
+				<artifactId>aspectjrt</artifactId>
 				<version>${aspectjrt}</version>
 			</dependency>
 		</dependencies>
