--- a/ssh/pom.xml
+++ b/ssh/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.1.3</version>
+		<version>3.2.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>ssh</artifactId> 
+	<artifactId>ssh</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -23,16 +23,18 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>email</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
-				<groupId>io.netty</groupId>
-				<artifactId>netty-all</artifactId> 
-			</dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.mina</groupId>
 			<artifactId>mina-core</artifactId>
 			<scope>provided</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-core</artifactId>
@@ -67,7 +69,7 @@
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<scope>provided</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
@@ -77,6 +79,6 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<scope>provided</scope>
-		</dependency> 
+		</dependency>
 	</dependencies>
 </project>
