--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,7 @@
 
 	<modules>
 		<module>admin</module>
-		<module>boot</module>
-		<module>cloud</module>
+		<!-- <module>boot</module> <module>cloud</module> -->
 		<module>common</module>
 		<module>core</module>
 		<module>dao</module>
@@ -43,6 +42,8 @@
 		<maven-compiler-plugin>3.8.1</maven-compiler-plugin>
 		<maven-source-plugin>3.2.1</maven-source-plugin>
 		<maven-javadoc-plugin>3.1.1</maven-javadoc-plugin>
+		<maven-surefire-plugin>2.22.2</maven-surefire-plugin>
+		<maven-clean-plugin>3.1.0</maven-clean-plugin>
 		<maven-gpg-plugin>1.6</maven-gpg-plugin>
 		<javaee-api>8.0.1</javaee-api>
 		<lombok>1.18.10</lombok>
@@ -56,7 +57,7 @@
 		<httpcore-nio>4.4.12</httpcore-nio>
 		<httpasyncclient>4.1.4</httpasyncclient>
 		<protobuf-java>3.11.1</protobuf-java>
-		<hibernate-core>5.4.10.Final</hibernate-core> 
+		<hibernate-core>5.4.10.Final</hibernate-core>
 		<HikariCP>3.4.1</HikariCP>
 		<mysql-connector-java>8.0.18</mysql-connector-java>
 		<netty-all>4.1.44.Final</netty-all>
@@ -72,9 +73,7 @@
 		<commons-dbcp2>2.7.0</commons-dbcp2>
 		<mina-core>2.1.3</mina-core>
 		<aspectjrt>1.9.5</aspectjrt>
-		<!-- 
-		<druid>1.1.21</druid>
-		 -->
+		<!-- <druid>1.1.21</druid> -->
 	</properties>
 
 	<licenses>
@@ -133,7 +132,21 @@
 					<source>${jdk}</source>
 					<target>${jdk}</target>
 					<encoding>UTF-8</encoding>
+					<skip>true</skip>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin}</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>${maven-clean-plugin}</version>
 			</plugin>
 		</plugins>
 	</build>
@@ -229,12 +242,12 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>core</artifactId>
 				<version>${parent}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>dao</artifactId>
 				<version>${parent}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>email</artifactId>
@@ -380,13 +393,8 @@
 				<artifactId>hibernate-core</artifactId>
 				<version>${hibernate-core}</version>
 			</dependency>
-			<!-- 
-			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>druid</artifactId>
-				<version>${druid}</version>
-			</dependency>
-			 -->
+			<!-- <dependency> <groupId>com.alibaba</groupId> <artifactId>druid</artifactId> 
+				<version>${druid}</version> </dependency> -->
 			<dependency>
 				<groupId>com.zaxxer</groupId>
 				<artifactId>HikariCP</artifactId>
