--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.weicoder</groupId>
 	<artifactId>weicoder</artifactId>
-	<version>3.2.5</version>
+	<version>3.2.5.1</version>
 	<packaging>pom</packaging>
 	<name>weicoder</name>
 	<description>java tools</description>
@@ -38,7 +38,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<parent>3.2.5</parent>
+		<parent>3.2.5.1</parent>
 		<extend>3.2</extend>
 		<jdk>11</jdk>
 		<maven-compiler-plugin>3.8.1</maven-compiler-plugin>
@@ -67,7 +67,7 @@
 		<kafka-clients>2.4.0</kafka-clients>
 		<guava>28.2-jre</guava>
 		<elasticsearch>7.5.2</elasticsearch>
-		<poi>28.2-jre</poi>
+		<poi>4.1.1</poi>
 		<nacos-client>1.1.4</nacos-client>
 		<protobuf-java>3.11.1</protobuf-java>
 		<quartz>2.3.2</quartz>  
