--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId> 
-		<version>3.2.5.1</version> 
+		<version>3.2.6</version> 
 	</parent>
 	<modelVersion>4.0.0</modelVersion> 
 	<artifactId>oauth</artifactId> 
@@ -12,7 +12,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>web</artifactId>
+			<artifactId>core</artifactId>
 		</dependency>
 	</dependencies>
 </project>
