--- a/test/src/main/resources/config.properties
+++ b/test/src/main/resources/config.properties
@@ -9,7 +9,7 @@ nacos.addr=192.168.199.196:8848
 
 #\u65e5\u5fd7
 log.dir=user
-log.level=${log.level}
+log.level=info
 
 #redis 
 redis.default.host=redis.test
