--- a/http/pom.xml
+++ b/http/pom.xml
@@ -15,7 +15,7 @@
 			<artifactId>core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.weicoder</groupId>
+			<groupId>com.weicoder.extend</groupId>
 			<artifactId>http-extend</artifactId>
 		</dependency>
 		<!-- 
