--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<parent>3.2.6</parent>
-		<extend>3.2</extend>
+		<extend>3.2.1</extend>
 		<jdk>11</jdk>
 		<maven-compiler-plugin>3.8.1</maven-compiler-plugin>
 		<maven-source-plugin>3.2.1</maven-source-plugin>
@@ -62,20 +62,20 @@
 		<hibernate-core>5.4.10.Final</hibernate-core>
 		<mysql-connector-java>8.0.19</mysql-connector-java>
 		<netty-all>4.1.45.Final</netty-all>
-		<mongo-java-driver>3.12.0</mongo-java-driver>
+		<mongo-java-driver>3.12.1</mongo-java-driver>
 		<jedis>3.2.0</jedis>
 		<kafka-clients>2.4.0</kafka-clients>
 		<guava>28.2-jre</guava>
-		<elasticsearch>7.5.2</elasticsearch>
-		<poi>4.1.1</poi>
+		<elasticsearch>7.6.0</elasticsearch>
+		<poi>4.1.2</poi>
 		<nacos-client>1.1.4</nacos-client>
-		<protobuf-java>3.11.1</protobuf-java>
+		<protobuf-java>3.11.4</protobuf-java>
 		<quartz>2.3.2</quartz>  
 		<solr-solrj>8.4.1</solr-solrj>
-		<httpclient>4.5.10</httpclient>
-		<httpmime>4.5.10</httpmime>
-		<httpcore>4.4.12</httpcore>
-		<httpcore-nio>4.4.12</httpcore-nio>
+		<httpclient>4.5.11</httpclient>
+		<httpmime>4.5.11</httpmime>
+		<httpcore>4.4.13</httpcore>
+		<httpcore-nio>4.4.13</httpcore-nio>
 		<httpasyncclient>4.1.4</httpasyncclient>
 	</properties>
 <!-- 
@@ -384,82 +384,82 @@
 				<version>${parent}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>core-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>dao-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>elasticsearch-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>email-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>excel-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>kafka-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>memcache-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>mongo-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>nacos-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>protobuf-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>http-extend</artifactId>
 				<version>${extend}</version>
 			</dependency> 
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>quartz-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>redis-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>socket-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>solr-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder</groupId>
+				<groupId>com.weicoder.extend</groupId>
 				<artifactId>xml-extend</artifactId>
 				<version>${extend}</version>
 			</dependency>
