--- a/rpc/pom.xml
+++ b/rpc/pom.xml
@@ -7,22 +7,12 @@
 		<artifactId>weicoder</artifactId>
 		<version>3.2.6</version>
 	</parent>
-	<artifactId>elasticsearch</artifactId>
+	<artifactId>rpc</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>common</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.weicoder.extend</groupId>
-			<artifactId>elasticsearch-extend</artifactId>
-		</dependency> 
-		<!--  
-		<dependency>
-			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>elasticsearch-rest-high-level-client</artifactId>
-		</dependency>
-		-->
 	</dependencies>
 </project>
