--- a/socket/pom.xml
+++ b/socket/pom.xml
@@ -19,7 +19,7 @@
 			<artifactId>protobuf</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.weicoder</groupId>
+			<groupId>com.weicoder.extend</groupId>
 			<artifactId>socket-extend</artifactId>
 		</dependency>
 		<!-- 
